[gd_scene load_steps=5 format=2]

[ext_resource path="res://LevelClearedFailed.escn" type="PackedScene" id=1]
[ext_resource path="res://LevelClearedFailed.gd" type="Script" id=2]
[ext_resource path="res://LevelClearedFailedButtons.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=39]
extents = Vector3( 0.40359, 0.40534, 0.0643781 )

[node name="LevelClearedFailed" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0059936, 0.213587, 5.55621 )
script = ExtResource( 2 )

[node name="Light" parent="." index="0"]
visible = false

[node name="Camera" parent="." index="1"]
visible = false

[node name="Level Cleared" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, -2.80934, 2.87762, -4.40064 )
visible = false

[node name="Level Failed" parent="." index="3"]
visible = false

[node name="dig0" parent="." index="5"]
visible = false

[node name="dig1" parent="." index="6"]
visible = false

[node name="dig2" parent="." index="7"]
visible = false

[node name="dig3" parent="." index="8"]
visible = false

[node name="dig4" parent="." index="9"]
visible = false

[node name="dig5" parent="." index="10"]
visible = false

[node name="dig6" parent="." index="11"]
visible = false

[node name="dig7" parent="." index="12"]
visible = false

[node name="dig8" parent="." index="13"]
visible = false

[node name="dig9" parent="." index="14"]
visible = false

[node name="Levels" parent="." index="15"]
editor/display_folded = true
script = ExtResource( 3 )

[node name="Area" type="Area" parent="Levels" index="0"]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="Levels/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0287151, 0, -0.0149283 )
shape = SubResource( 39 )

[node name="Restart" parent="." index="16"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.65661e-009, 1.3, -3 )
script = ExtResource( 3 )

[node name="Area" type="Area" parent="Restart" index="0"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0226071, 0.000820518, 0.0583887 )

[node name="CollisionShape" type="CollisionShape" parent="Restart/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0287151, 0, -0.0149283 )
shape = SubResource( 39 )

[node name="Next" parent="." index="17"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.53645, 1.29019, -3.0063 )
script = ExtResource( 3 )

[node name="Area" type="Area" parent="Next" index="0"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.093832, -0.04431, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Next/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0287151, 0, -0.0149283 )
shape = SubResource( 39 )

[node name="frame" parent="." index="18"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57229, -3.84725 )
visible = false
[connection signal="click" from="Levels" to="." method="_on_Levels_click"]
[connection signal="input_event" from="Levels/Area" to="Levels" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Levels/Area" to="Levels" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Levels/Area" to="Levels" method="_on_Area_mouse_exited"]
[connection signal="click" from="Restart" to="." method="_on_Restart_click"]
[connection signal="input_event" from="Restart/Area" to="Restart" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Restart/Area" to="Restart" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Restart/Area" to="Restart" method="_on_Area_mouse_exited"]
[connection signal="click" from="Next" to="." method="_on_Next_click"]
[connection signal="input_event" from="Next/Area" to="Next" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Next/Area" to="Next" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Next/Area" to="Next" method="_on_Area_mouse_exited"]
